--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -1,13 +1,69 @@
+
+ @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap");
+ 
+ /* general styling */
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Raleway";
+  max-height: auto;
+  box-sizing: border-box;
+  background: linear-gradient(90deg, rgba(229,235,236,1) 5%, rgba(199,210,210,1) 30%, rgba(180,203,204,1) 75%, rgba(235,241,241,1) 91%);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container-body{
+  margin: 0 auto;
+}
+
+.container-main {
+  display: grid;
+  gap: 20px;
+  padding: 10px;
+  height: 100%;
+  width: 100%;
+}
+
+.navbar{
+ float: right;
+}
+
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  text-align: right;
+}
+
+.navbar li {
+  float: left;
+}
+
+.navbar li a {
+  display: block;
+  color: rgb(44, 40, 40);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.navbar li a:hover {
+  background-color: rgba(209, 209, 209, 0.644);
+}
+
+.header{
+  margin-left: 20px;
+}
+
+.header h1{
+  color: var(--primary);
+  font-size: 2.1rem;
+  letter-spacing: 2px;
+  font-weight: normal;
+  margin: 15px;
+}
+
+.header h2{
+  margin-top: 60px;
+  font-size: 1.6rem;
+  margin: 15px;
 }
