--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -67,3 +67,50 @@ body {
   font-size: 1.6rem;
   margin: 15px;
 }
+
+img {
+  height: 300px;
+  width: 400px;
+  margin-bottom: 10px;
+}
+
+.card-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  /* gap: 20px; */
+  height: 100%;
+  width: 100%;
+  /* background: pink; */
+  place-items: center;
+  
+}
+
+.card-container .card {
+  position: relative;
+  height: fit-content;
+  width: fit-content;
+  margin: 0;
+  padding: 10px;
+  min-width: 200px;
+  box-shadow: 3px 5px 7px rgba(0,0,0,0.5);
+  border: 3px solid white;
+  transition: 0.5s;
+
+}
+
+.add-post-form {
+  background: linear-gradient(0deg, rgba(241,241,241,1) 28%, rgba(205,205,205,1) 67%);
+  padding: 20px 10px;
+  width: fit-content;
+  border-radius: 4px;
+  box-shadow: 3px 5px 7px rgba(165, 165, 165, 0.5);
+  border: 3px solid white;
+  place-self: center;
+}
+
+.progress-bar{
+  background: var(--primary);
+  margin-top: 20px;
+  margin-bottom: 20px;
+  height: 20px;
+}
